Changes file for {{$dist->name}}

{{$NEXT}}

1.18      2014-08-12 22:03:34-05:00 America/Chicago

  * Documentation updates for 'fetch' and 'gc' (Dan McCracken)

1.17      2014-07-24 10:03:54-07:00 America/Los_Angeles

  * Modify dist.ini to pull the INSTALL file from the build back into
    the repo (addresses #28)

1.16      2014-07-23 16:19:42-07:00 America/Los_Angeles

  * Load Net::GitHub on the fly in the 'fork' command. Make it an
    optional dep. Provide nice error message if it is not installed
    when the 'fork' command is used.

1.15      2014-05-08 21:19:33-07:00 America/Los_Angeles

  * Fix stupid bugs because File::Slurp::Tiny does things _just_
    slightly differently on some versions of Perl because we don't get
    to have nice things ever.

1.14      2014-05-08 18:06:22-07:00 America/Los_Angeles

  * Move from File::Slurp to File::Slurp::Tiny (#25)

1.13      2014-04-26 10:40:00-07:00 America/Los_Angeles

  * __sigh__       

1.12      2014-04-22 20:54:41-07:00 America/Los_Angeles
  
1.11      2014-04-22 18:53:24-07:00 America/Los_Angeles

  * Add 'fetch' subcommand (Rolando Pereira)

1.10      2013-12-15 20:28:02 America/Los_Angeles

  * Add 'that' subcommand; refactor 'this' (Mike Greb)
  * Add '-s' (session) support to 'mux' (Chris Prather)

1.09      2013-10-06 11:01:46 America/New_York

  * Add --skip-tags for skipping repos with given tag(s) (Mike Greb)

1.08      2013-07-04 14:37:24 America/Los_Angeles

  * Remove given/when constructs (which will silence the warnings on newer Perls)
    (Thanks to Heikki Lehvaslaiho for raising this issue.)

1.07      2013-04-24 20:27:45 America/Los_Angeles

  [BUGFIX]

  * Fix mocking so that test doesn't fail on older Perls

1.06      2013-04-14 17:28:20 America/Los_Angeles

  [BUGFIXES]

  * Make 'got mux' more resilant with re-attaching (Github issue #7) (John SJ Anderson)
  * Update for Net::GitHub API chaneg (Github issue #4) (John SJ Anderson)

  [ENHANCEMENT]
