@@ -18,37 +18,34 @@ sub command_names { qw/ mux tmux / }
 sub _execute {
   my( $self, $opt, $args ) = @_;
 
-  unless ( $self->active_repos and $self->active_repos == 1 ) {
-    say STDERR 'ERROR: You need to select a single repo';
-    exit(1);
-  }
-
-  my( $repo ) = $self->active_repos;
+  my( @repos ) = $self->active_repos;
 
   my $target = $self->session ? 'session' : 'window';
 
-  # is it already opened?
-  my %windows = reverse map { /^(\d+):::(\S+)/ }
-    split "\n", `tmux list-$target -F"#I:::#W"`;
+  foreach my $repo ( @repos ) {
 
-  if( my $window = $windows{$repo->name} ) {
-    if ($self->session) {
-        exec 'tmux', 'switch-client', '-t' => $window;
-    } else {
-        exec 'tmux', 'select-window', '-t' => $window;
-    }
+      # is it already opened?
+      my %windows = reverse map { /^(\d+):::(\S+)/ }
+        split "\n", `tmux list-$target -F"#I:::#W"`;
+
+      if( my $window = $windows{$repo->name} ) {
+          if ($self->session) {
+              system 'tmux', 'switch-client', '-t' => $window;
+          } else {
+              system 'tmux', 'select-window', '-t' => $window;
+          }
+      }
+
+      chdir $repo->path;
+
+      if ($self->session) {
+          delete local $ENV{TMUX};
+          system 'tmux', 'new-session', '-d', '-s', $repo->name;
+          system 'tmux', 'switch-client', '-t' => $repo->name;
+      } else {
+          system 'tmux', 'new-window', '-n', $repo->name;
+      }
   }
-
-  chdir $repo->path;
-
-  if ($self->session) {
-    delete local $ENV{TMUX};
-    system 'tmux', 'new-session', '-d', '-s', $repo->name;
-    exec 'tmux', 'switch-client', '-t' => $repo->name;
-  } else {
-    exec 'tmux', 'new-window', '-n', $repo->name;
-  }
-
 }
 
 __PACKAGE__->meta->make_immutable;
